# serde-device-tree

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
examples/: bl808.dtb  cv1812cp_milkv_duo256m_sd.dts  hifive-unmatched-a00.dtb  hifive-unmatched-a00.dts  hifive-unmatched-a00.rs  qemu-virt.dtb  qemu-virt.dts  qemu-virt.rs  re_encode.rs  serialize.rs
src/: common.rs  de.rs  de_mut.rs  error.rs  lib.rs  ser.rs  tag.rs
src/de_mut/: cursor.rs  data.rs  device_tree.rs  group.rs  matrix.rs  mod.rs  node.rs  node_seq.rs  reg.rs  str_seq.rs  struct.rs  struct_access.rs  structs.rs  structure_block.rs
src/de_test/: cursor.rs  data.rs  group.rs  mod.rs  node_seq.rs  str_seq.rs  struct.rs  structs.rs
src/ser/: mod.rs  patch.rs  pointer.rs  serializer.rs  string_block.rs
src/utils/: chosen.rs  mod.rs
src/value/: compatible.rs  cpu.rs  mod.rs  riscv_pmu.rs  tree.rs
tests/: bl808.rs  hifive-unmatched-a00.rs  qemu-virt.rs
