[package]
name = "serde_device_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", default-features = false, features = ["alloc"] } # no std

[dev-dependencies]
serde_derive = "1.0"
