[package]
name = "serde-device-tree"
version = "0.0.1"
authors = ["Luo Jia <me@luojia.cc>"]
repository = "https://github.com/luojia65/serde-device-tree"
documentation = "https://docs.rs/serde-device-tree"
license = "MulanPSL-2.0"
description = "A Device Tree blob serialization file format"
readme = "README.md"
keywords = ["serde", "serialization"]
categories = ["no-std", "encoding"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", default-features = false }
erased-serde = "0.4"

[dev-dependencies]
serde_derive = "1.0"

[features]
default = ["std"]

std = ["serde/std"]
alloc = ["serde/alloc"]
